fix date error
